# bioinfo_course

./: CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
bioinfo_course/: Person.py  __init__.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: test_Person.py  test_bioinfo_course.py
