[tool.poetry]
name = "bioinfo-course"
version = "0.1.0"
description = ""
authors = ["Yuchen Xiang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scanpy = "^1.9.8"
pip = "18.1"
bumpversion = "0.5.3"
wheel = "0.32.1"
watchdog = "0.9.0"
flake8 = "3.5.0"
tox = "3.5.2"
coverage = "4.5.1"
sphinx = "1.8.1"
twine = "1.12.1"
pytest = "3.8.2"
pytest-runner = "4.2"
pytest-cov = "2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
